--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -1,5 +1,5 @@
-FROM openjdk
-MAINTAINER Piotr Minkowski <piotr.minkowski@gmail.com>
+FROM azul/zulu-openjdk-alpine
+MAINTAINER Wang Qing <wq237wq@gmail.com>
 ADD target/customer-service.jar customer-service.jar
 ENTRYPOINT ["java", "-jar", "/customer-service.jar"]
 EXPOSE 3333
