--- a/account-service/Dockerfile
+++ b/account-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk
+FROM azul/zulu-openjdk-alpine
 MAINTAINER Wang Qing <wangq@jfrog.com>
 ADD target/account-service.jar account-service.jar
 ENTRYPOINT ["java", "-jar", "/account-service.jar"]
