update jenkins file

--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
   numberRegistrySyncRetries: 1
   instance:
     preferIpAddress: false
-    hostname: localhost
+    hostname: eureka-server
   client:
     registerWithEureka: false
     fetchRegistry: false
