--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -1,4 +1,3 @@
- using hostname.
 
 [code language="java"]
 node {
@@ -6,7 +5,7 @@ node {
     withMaven(maven:'maven') {
 
         stage('Checkout') {
-            git url: 'https://github.com/piomin/sample-spring-microservices.git', credentialsId: 'github-piomin', branch: 'master'
+            git url: 'https://github.com/alexwang66/sample-microservices-k8s.git', credentialsId: 'wangqing-github', branch: 'master'
         }
 
         stage('Build') {
