--- a/kube-deploy/deployment-discovery.yaml
+++ b/kube-deploy/deployment-discovery.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: discovery-service
+  name: eureka-server
   namespace: default
 spec:
   ports:
@@ -10,21 +10,21 @@ spec:
       targetPort: 8761
       nodePort: 30191
   selector:
-    app: discovery-service
+    app: eureka-server
   type: NodePort
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: discovery-service
+  name: eureka-server
   labels:
-    run: discovery-service
+    run: eureka-server
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        run: discovery-service
+        run: eureka-server
     spec:
       containers:
       - name: discovery-service
