--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>customer-service</artifactId>
-
+	<version>1.1</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
