--- a/kube-deploy/deployment-discovery.yaml
+++ b/kube-deploy/deployment-discovery.yaml
@@ -3,18 +3,17 @@ kind: Service
 metadata:
   name: eureka-server
   namespace: default
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
-    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: x-chkp-management=cpmanagement,x-chkp-template=cpasg,x-chkp-forwarding=HTTP-9080-3000
   labels:
-    app: eureka-server
+    run: eureka-server
 spec:
   ports:
-    - port: 3000
-      targetPort: 8761
+    - name: port1
+      protocol: TCP
+      port: 8761
+      nodePort: 31002
   selector:
-    app: eureka-server
-  type: LoadBalancer
+    run: eureka-server
+  type: NodePort
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -36,5 +35,5 @@ spec:
         - containerPort: 8761
           protocol: TCP
       imagePullSecrets:
-      - name: artifactory-docker-registry
+      - name: regcred
 
