--- a/account-service/Jenkinsfile
+++ b/account-service/Jenkinsfile
@@ -18,13 +18,13 @@ node {
 
         stage('Image') {
             dir ('account-service') {
-                def app = docker.build "art.local:30400/sample-spring-microservices/account-service:${env.version}"
+                def app = docker.build "docker-release-local2.demo.jfrogchina.com/sample-spring-microservices/account-service:${env.version}"
                 app.push()
             }
         }
 
         stage ('Run') {
-            docker.image("127.0.0.1:30400/sample-spring-microservices/account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
+            docker.image("docker-release-local2.demo.jfrogchina.com/sample-spring-microservices/account-service:${env.version}").run('-p 2222:2222 -h account --name account --link discovery')
         }
 
         stage ('Final') {
