--- a/kube-deploy/deployment-account.yaml
+++ b/kube-deploy/deployment-account.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: account-service
+  labels:
+    run: account-server
 spec:
   ports:
   - port: 2222
@@ -9,7 +11,7 @@ spec:
     targetPort: 2222
     nodePort: 30222
   selector:
-    app: account-service
+    run: account-service
   type: NodePort
 ---
 apiVersion: extensions/v1beta1
@@ -27,9 +29,9 @@ spec:
     spec:
       containers:
       - name: account-service
-        image: art.local:8081/docker/account-service:latest
+        image: docker-release-local2.demo.jfrogchina.com/sample-spring-microservices/account-service:latest
         ports:
         - containerPort: 2222
           protocol: TCP
       imagePullSecrets:
-      - name: localregcred
+      - name: regcred
