--- a/kube-deploy/jenkins.yaml
+++ b/kube-deploy/jenkins.yaml
@@ -1,20 +1,24 @@
-apiVersion: v1
 kind: PersistentVolume
+apiVersion: v1
 metadata:
-  name: jenkins-pv-volume
+  name: task-pv-volume
+  labels:
+    type: local
 spec:
+  storageClassName: manual
   capacity:
-    storage: 10Gi
+    storage: 3Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/data/jenkins"
+    path: "/mnt/data/jenkins-home"
 ---
-apiVersion: v1
 kind: PersistentVolumeClaim
+apiVersion: v1
 metadata:
-  name: jenkins-pv-claim
+  name: task-pv-claim
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
@@ -24,7 +28,7 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: jenkins-deployment
+  name: jenkins-server
   labels:
     app: jenkins-server
 spec:
@@ -39,23 +43,16 @@ spec:
     spec:
       containers:
         - name: jenkins
-          image: jenkins:2.3-alpine
+          image: jenkins:2.60.3-alpine
           ports:
             - containerPort: 8080
           volumeMounts:
-            - name: jenkins-home
+            - name: task-pv-storage
               mountPath: "/var/jenkins_home"
-#          resources:
-#            limits:
-#              cpu: "1"
-#              memory: 512Mi
-#            requests:
-#              cpu: "1"
-#              memory: 512Mi
       volumes:
-        - name: jenkins-home
+        - name: task-pv-storage
           persistentVolumeClaim:
-            claimName: jenkins-pv-claim # must match the claim name from above
+            claimName: task-pv-claim
 ---
 apiVersion: v1
 kind: Service
