--- a/kube-deploy/deployment-discovery.yaml
+++ b/kube-deploy/deployment-discovery.yaml
@@ -30,10 +30,10 @@ spec:
     spec:
       containers:
       - name: discovery-service
-        image: docker-release-local2.demo.jfrogchina.com/sample-spring-microservices/discovery-service:latest
+        image: 47.93.114.82/docker-release-local2/sample-spring-microservices/discovery-service:latest
         ports:
         - containerPort: 8761
           protocol: TCP
       imagePullSecrets:
-      - name: regcred
+      - name: regcredip
 
