--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -48,7 +48,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
+				<version>Greenwich.SR4</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
