#CIC-5 fix jenkins

--- a/discovery-service/Jenkinsfile
+++ b/discovery-service/Jenkinsfile
@@ -143,14 +143,17 @@
     def getRequirementsIds(){
         def reqIds = "";
         final changeSets = currentBuild.changeSets
+        echo currentBuild.changeSets as String
         echo 'changeset count:'+ changeSets.size().toString()
         final changeSetIterator = changeSets.iterator()
         while (changeSetIterator.hasNext()) {
             final changeSet = changeSetIterator.next();
             def logEntryIterator = changeSet.iterator();
+            echo 'log messages ' + logEntry.getMsg();
             while (logEntryIterator.hasNext()) {
                 final logEntry = logEntryIterator.next()
                 def patten = ~/#[\w\-_\d]+/;
+                echo 'log messages ' + logEntry.getMsg();
                 def matcher = (logEntry.getMsg() =~ patten);
                 def count = matcher.getCount();
                 for (int i = 0; i < count; i++){
