--- a/account-service/pom.xml
+++ b/account-service/pom.xml
@@ -9,10 +9,6 @@
 		<artifactId>sample-spring-microservices</artifactId>
 		<version>1.0</version>
 	</parent>
-
-
-
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -29,6 +25,10 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 	</dependencies>
 
