--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
     level:
       org.springframework: WARN
       org.hibernate: WARN
+  zipkin:
+    base-url: http://localhost:9411
 
 eureka:  
   client:
