--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -20,6 +20,7 @@ eureka:
   instance:
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
+#    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
       
 ribbon:
   eureka:
