--- a/gateway-service/Dockerfile
+++ b/gateway-service/Dockerfile
@@ -1,5 +1,5 @@
-FROM openjdk
-MAINTAINER Piotr Minkowski <piotr.minkowski@gmail.com>
+FROM azul/zulu-openjdk-alpine
+MAINTAINER Wang Qing <wq237wq@gmail.com>
 ADD target/gateway-service.jar gateway-service.jar
 ENTRYPOINT ["java", "-jar", "/gateway-service.jar"]
 EXPOSE 8765
