--- a/kube-deploy/discovery.yaml
+++ b/kube-deploy/discovery.yaml
@@ -30,10 +30,10 @@ spec:
     spec:
       containers:
       - name: discovery-service
-        image: 47.93.114.82/docker-release-local2/sample-spring-microservices/discovery-service:latest
+        image: art.local:8081/docker/sample-spring-microservices/discovery-service:latest
         ports:
         - containerPort: 8761
           protocol: TCP
       imagePullSecrets:
-      - name: regcredip
+      - name: regcred-local
 
