--- a/account-service/src/main/resources/application.yml
+++ b/account-service/src/main/resources/application.yml
@@ -17,9 +17,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone:  ${DISCOVERY_URL:http://eureka-server:8761}/eureka/
-  instance:
-    leaseRenewalIntervalInSeconds: 1
-    leaseExpirationDurationInSeconds: 2
+#  instance:
+#    leaseRenewalIntervalInSeconds: 1
+#    leaseExpirationDurationInSeconds: 2
 #    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
       
 ribbon:
