--- a/kube-deploy/charts/discovery/templates/service.yaml
+++ b/kube-deploy/charts/discovery/templates/service.yaml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: eureka-server
+  name: {{ template "discovery.name" . }}
   namespace: default
   labels:
-    run: eureka-server
+    run: {{ template "discovery.name" . }}
 spec:
   ports:
     - name: port1
+      port: {{ .Values.service.port }}
+      nodePort: {{ .Values.service.nodePort }}
       protocol: TCP
-      port: 8761
-      nodePort: 31002
   selector:
-    run: eureka-server
+    run: {{ template "discovery.name" . }}
   type: NodePort
 
 #apiVersion: v1
